--- a/helm/kafka-connect-msk-v2/values.yaml
+++ b/helm/kafka-connect-msk-v2/values.yaml
@@ -1,7 +1,7 @@
 serviceAccountName: kafka-connect-msk-iam-serviceaccount
 replicaCount: 1
 image:
-  imageKafka: garystafford/kafka-connect-msk:1.2.0
+  imageKafka: sroy/kafka-connect-msk:1.2.0
   imageApicurio: apicurio/apicurio-registry-sql:2.1.5.Final
   pullPolicy: IfNotPresent
   registryDatasourceUrl: jdbc:postgresql://your-pagila-database-url.us-east-1.rds.amazonaws.com:5432/apicurio-registry
